<resources>
    <string name="app_name">Securitly</string>
    <string name="morning">Good Morning</string>
    <string name="afternoon">Good Afternoon</string>
    <string name="evening">Good Evening</string>
    <string name="status">Securitly is:</string>
    <string name="active">Active</string>
    <string name="not_active">Not Active</string>
    <string name="location_permission">Location permission has to be enabled</string>
    <string name="location_must">You must accept location permission for Securitly to work</string>
    <string name="message">Emergency message:</string>
    <string name="message_placeholder">Hi, i´m Emma, my battery died.</string>
    <string name="change_message">Change Message</string>
    <string name="location_alert_title">Securitly needs to know your location all the time</string>
    <string name="location_alert_message">Do you want to enable your location?\nGo to Settings -> Apps -> Securitly -> Always allow location.\n\nThen restart Securitly</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="message_to">Send message to:</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="no_contacts">You have not selected your contacts</string>
    <string name="send_location">Send my last location</string>
    <string name="delivered">SMS Delivered</string>
    <string name="not_delivered">SMS failed delivering</string>
    <string name="securitly_settings">Securitly settings</string>
    <string name="ask_percentaje">Send emergency message when battery level is</string>
    <string name="reset">Reset default data</string>
    <string name="warning">Warning</string>
    <string name="sure_delete">Are you sure you want to reset default data?</string>
    <string name="no_lower">Minimum battery percentage is 2%</string>
    <string name="no_upper">Maximum battery percentage is 100%</string>
    <string name="no_valid_data">Please introduce a number</string>
    <string name="about">About</string>
    <string name="how_to">How to use Securitly</string>
    <string name="name">Name:</string>
    <string name="phone">Phone number:</string>
    <string name="name_hint">David Martínez</string>
    <string name="done">Done</string>
    <string name="message_saved">Message saved correctly</string>
    <string name="cancel">Cancel</string>
    <string name="delete_contact">Do you want to delete this contact from your contacts list?</string>
    <string name="delete">Delete contact</string>
    <string name="fill_name">Please fill the "Name" field</string>
    <string name="fill_phone">Please fill the "Phone number" field</string>
    <string name="instructions_1">1. Securitly needs to know your location all the time. In order to do that, go to your device settings -> apps -> Securitly -> Permissions and change the location permission to "Allow all the time".</string>
    <string name="instructions_2">2.Do not force close Securitly. Otherwise, your emergency message will not be sent to your contacts.</string>
    <string name="instructions_3">3. We do not recommend that you set the battery level at which you will send your emergency message to 1 or 2%, as your device may turn off before sending the message.</string>
    <string name="about_us">This app was made by 5 students from the Technological Institute of Laguna, Mexico. This project began as an idea that we set out to make a reality, and together with our mentor, engineer Gerardo, we made it possible. With this app we hope to contribute a little with the current situation in the world.</string>
    <string name="location_example">\n\nMy device\'s last location was:\nlatitude:\n40.776570\nlongitude: -73.969979\nCentral Park West Historic District\nNew York, 10024, EE. UU.</string>
    <string name="permission_neccesary">Securitly can\'t work because "Send SMS" permission is not granted</string>
    <string name="location_permission_neccesary">Securitly can\'t work because "Always Location" permission is not granted. Securitly needs to know your location so it can send your last known location to your selected contacts</string>
    <string name="last_location">My last location was:</string>
    <string name="error_getting_location">There was an error getting this device\'s parsed location</string>
    <string name="dont_show">Don\'t show the "location required" pop up when Securitly starts</string>
</resources>