<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/greetingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:textStyle="bold"
            android:textSize="22sp"
            android:paddingTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:paddingTop="20dp"
            android:drawableEnd="@drawable/gear"
            android:onClick="toSettingsCall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="20dp"
            android:paddingLeft="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/statusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active"
                    android:layout_marginStart="5dp"
                    android:textSize="20sp"
                    android:layout_marginEnd="40dp"
                    android:textColor="@color/pink"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Switch
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:id="@+id/systemStatusSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/PinkTheme"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/content_function"
                android:orientation="vertical">
                <TextView
                    android:textAlignment="viewStart"
                    android:id="@+id/messageLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/message"
                    android:textSize="20sp"
                    />
                <androidx.core.widget.NestedScrollView
                    android:id="@+id/messageScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">
                    <TextView
                        android:textAlignment="viewStart"
                        android:theme="@style/PinkTheme"
                        android:background="@drawable/rounded_corners"
                        android:id="@+id/messageText"
                        android:padding="10dp"
                        android:gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/message_placeholder"/>
                </androidx.core.widget.NestedScrollView>
                <TextView
                    android:id="@+id/changeMessageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_message"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:onClick="changeMessageCall"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/pink"
                    android:padding="7dp"
                    android:textSize="18sp"/>
                <CheckBox
                    android:textAlignment="viewStart"
                    android:id="@+id/locationCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send_location"
                    android:theme="@style/PinkTheme"
                    android:textSize="18sp"
                    android:onClick="locationCheckboxClickCall"/>


                <TextView
                    android:textAlignment="viewStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/message_to"
                    android:textSize="20sp"
                    />


                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/rounded_corners">
                    <LinearLayout
                        android:id="@+id/contacts"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">
                        <TextView
                            android:id="@+id/notSelectedContacts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingTop="50dp"
                            android:text="@string/no_contacts"
                            android:textSize="20sp"
                            android:alpha="0.7"/>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
                <TextView
                    android:id="@+id/addContactsButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="7dp"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/pink"
                    android:text="@string/add_contacts"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:onClick="toAddContactCall"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>