<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangeMessageActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableStart="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="goBackCall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <EditText
            android:id="@+id/messageEdit"
            android:theme="@style/PinkTheme"
            android:background="@drawable/rounded_corners"
            android:padding="10dp"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/message_placeholder"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:onClick="saveMessageCall"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:background="@drawable/rounded_corners"
            android:padding="7dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/pink"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>